--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         </select>
                     </div>
 
-                    <div id="contactList" class="h-80 overflow-y-auto bg-gray-50 border border-gray-300 rounded-xl text-sm">
+                    <div id="contactList" class="h-auto overflow-y-auto bg-gray-50 border border-gray-300 rounded-xl text-sm">
                         <!-- Los contactos filtrados se renderizan aquí -->
                     </div>
                     <p id="contactCount" class="text-xs text-gray-500 text-right font-medium"></p>
